# dynarray

./: COPYING.txt  Cargo.toml
src/: lib.rs  linalg.rs
tests/: linalg.rs
