[package]
name = "dynarray"
version = "0.0.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "dynarray"
path = "src/lib.rs"

[features]
default = []
f16 = ["float", "memrepr/f16"]
gpu = []
mklml = ["mklml_ffi"]

#[build-dependencies]
#bindgen = "*"

[dependencies]
arrayidx = { path = "../arrayidx" }
float = { version = "*", optional = true }
memrepr = { path = "../memrepr" }
mklml_ffi = { path = "../mklml_ffi", optional = true }
