[package]
name = "rearray"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[features]
default = []
f16 = ["half", "memrepr/f16"]
mklml = ["mklml_ffi"]

[dependencies]
arrayidx = { path = "../arrayidx" }
half = { version = "^1.3", optional = true }
memrepr = { path = "../memrepr" }
mklml_ffi = { path = "../mklml_ffi", optional = true }
