[package]
name = "rearray"
version = "0.0.0"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[features]
default = ["mklml"]
f16 = ["half", "podmem/f16"]
mklml = ["mklml-sys"]

[dependencies]
arrayidx = { path = "../arrayidx" }
half = { version = "^1.3", optional = true }
mklml-sys = { path = "../mklml-sys", optional = true }
podmem = { path = "../podmem" }
